deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dripio-api-https
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "dripio-api"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: api-dripio-com
spec:
  backend:
    serviceName: dripio-core-service
    servicePort: 80
